<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/wallpaper"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/learn_japanese"
        android:textColor="@color/title"
        android:textSize="@dimen/_16sdp" />

    <Button
        android:id="@+id/n5_button"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/n5"
        android:textColor="@color/title"
        android:textSize="@dimen/_14sdp" />

    <Button
        android:id="@+id/n4_button"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/n4"
        android:textColor="@color/title"
        android:textSize="@dimen/_14sdp" />

</LinearLayout>