<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_4sdp"
    card_view:cardBackgroundColor="@color/detailBg"
    card_view:cardCornerRadius="@dimen/_10sdp">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp">

        <TextView
            android:id="@+id/kanji"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/kanji"
            android:textColor="@color/detailTitle"
            android:textSize="@dimen/_40sdp"/>

        <LinearLayout
            android:id="@+id/linear"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/onyomi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/onyomi"
                android:textColor="@color/detailDesc"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/kunyomi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/kunyomi"
                android:textColor="@color/detailDesc"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/arti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/arti"
                android:textColor="@color/detailDesc"
                android:textSize="@dimen/_12sdp"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>