<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_4sdp"
    card_view:cardBackgroundColor="@color/listViewBg"
    card_view:cardCornerRadius="@dimen/_10sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp">

        <TextView
            android:id="@+id/kanji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/_8sdp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/kanji"
            android:textColor="@color/listViewText"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/kanji"
            android:orientation="vertical">

            <TextView
                android:id="@+id/arti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/arti"
                android:textColor="@color/listViewText"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/kunyomi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/kunyomi"
                android:textColor="@color/listViewText"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/onyomi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/onyomi"
                android:textColor="@color/listViewText"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>